--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.1"
   }
 }
