--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/ablin42/seyrene#readme",
   "dependencies": {
+    "@hapi/joi": "^16.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1"
   },
   "devDependencies": {
