--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1"
   },
