--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   },
   "homepage": "https://github.com/ablin42/seyrene#readme",
   "dependencies": {
-    "@hapi/joi": "^16.1.1",
+    "@hapi/joi": "^16.1.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "date-format": "^2.1.0",
     "dotenv": "^8.1.0",
-    "ejs": "^2.6.2",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
+    "mongoose-paginate-v2": "^1.3.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
