--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
+    "image-type": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.0.1",
     "mongoose": "^5.7.1",
     "mongoose-paginate-v2": "^1.3.1",
     "multer": "^1.4.2",
