--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose-paginate-v2": "^1.3.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
+    "parse-error": "^0.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
