--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.4",
     "bcryptjs": "^2.4.3",
+    "content-filter": "^1.1.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "date-format": "^2.1.0",
@@ -30,8 +31,6 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "image-type": "^4.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongo-sanitize": "^1.0.1",
     "mongoose": "^5.7.1",
     "mongoose-paginate-v2": "^1.3.1",
     "multer": "^1.4.2",
