--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.4",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.0.0",
     "content-filter": "^1.1.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
