--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "content-filter": "^1.1.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "country-list": "^2.2.0",
     "date-format": "^2.1.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
