--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.7.1",
     "mongoose-paginate-v2": "^1.3.1",
     "multer": "^1.4.2",
+    "node-ipinfo": "^1.0.1",
     "nodemailer": "^6.3.0",
     "parse-error": "^0.2.0",
     "request": "^2.88.0",
