--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "image-type": "^4.1.0",
+    "money-exchange": "^1.0.0",
     "mongoose": "^5.7.1",
     "mongoose-paginate-v2": "^1.3.1",
     "multer": "^1.4.2",
