--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "seyrene",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "nodemon app",
-    "pretest": "eslint controllers/*.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ablin42/seyrene.git"
-  },
-  "author": "ablin42",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ablin42/seyrene/issues"
-  },
-  "homepage": "https://github.com/ablin42/seyrene#readme",
-  "dependencies": {
-    "@hapi/joi": "^16.1.4",
-    "bcryptjs": "^2.4.3",
-    "connect-mongo": "^3.0.0",
-    "content-filter": "^1.1.2",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "country-list-js": "^3.1.7",
-    "date-format": "^2.1.0",
-    "dotenv": "^8.1.0",
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-sanitizer": "^1.0.5",
-    "express-session": "^1.16.2",
-    "express-validator": "^6.2.0",
-    "image-type": "^4.1.0",
-    "money-exchange": "^1.0.0",
-    "mongoose": "^5.7.1",
-    "mongoose-paginate-v2": "^1.3.1",
-    "multer": "^1.4.2",
-    "node-ipinfo": "^1.0.1",
-    "nodemailer": "^6.3.0",
-    "parse-error": "^0.2.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "stripe": "^7.10.0"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "live-server": "^1.2.1"
-  }
+	"name": "seyrene",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "nodemon app",
+		"pretest": "eslint controllers/*.js controllers/helpers/*.js controllers/validators/*.js models/*.js public/scripts/*.js public/scripts/blog/*.js public/scripts/gallery/*.js public/scripts/shop/*.js -f table --fix"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ablin42/seyrene.git"
+	},
+	"author": "ablin42",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ablin42/seyrene/issues"
+	},
+	"homepage": "https://github.com/ablin42/seyrene#readme",
+	"dependencies": {
+		"@hapi/joi": "^16.1.4",
+		"bcryptjs": "^2.4.3",
+		"connect-mongo": "^3.0.0",
+		"content-filter": "^1.1.2",
+		"cookie-parser": "^1.4.4",
+		"cors": "^2.8.5",
+		"country-list-js": "^3.1.7",
+		"date-format": "^2.1.0",
+		"dotenv": "^8.1.0",
+		"ejs": "^2.7.1",
+		"express": "^4.17.1",
+		"express-flash": "0.0.2",
+		"express-sanitizer": "^1.0.5",
+		"express-session": "^1.16.2",
+		"express-validator": "^6.2.0",
+		"image-type": "^4.1.0",
+		"money-exchange": "^1.0.0",
+		"mongoose": "^5.7.1",
+		"mongoose-paginate-v2": "^1.3.1",
+		"multer": "^1.4.2",
+		"node-ipinfo": "^1.0.1",
+		"nodemailer": "^6.3.0",
+		"parse-error": "^0.2.0",
+		"request": "^2.88.0",
+		"request-promise": "^4.2.4",
+		"stripe": "^7.10.0"
+	},
+	"devDependencies": {
+		"eslint": "^6.8.0",
+		"live-server": "^1.2.1"
+	}
 }
