--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,17 @@
 {
-    "trailingComma": "none",
-    "semi": true,
-    "singleQuote": false,
-    "printWidth": 130,
-    "useTabs": true,
-    "quoteProps": "consistent",
-    "arrowParens": "avoid"
+	"trailingComma": "none",
+	"semi": true,
+	"singleQuote": false,
+	"printWidth": 130,
+	"useTabs": true,
+	"quoteProps": "consistent",
+	"arrowParens": "avoid",
+	"overrides": [
+		{
+			"files": ["*.ejs"],
+			"options": {
+				"printWidth": 200
+			}
+		}
+	]
 }
