added rate limited, safe regex, checked packages, added 2FA, bodyparser error handling, cleaned obj errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
 		"es6": true,
 		"node": true
 	},
-	"extends": "eslint:recommended",
+	//"plugins": ["security"],
+	"extends": ["eslint:recommended"], // "plugin:security/recommended"],
 	"globals": {
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly"
