--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
  },
  "homepage": "https://github.com/ablin42/seyrene#readme",
  "dependencies": {
-  "@hapi/joi": "^16.1.8",
   "bcryptjs": "^2.4.3",
   "connect-mongo": "^3.2.0",
   "cookie-parser": "^1.4.5",
@@ -38,12 +37,11 @@
   "express-session": "^1.17.1",
   "express-validator": "^6.6.0",
   "helmet": "^3.23.3",
-  "image-type": "^4.1.0",
-  "jsonwebtoken": "^8.5.1",
   "money-exchange": "^1.0.0",
   "mongo-sanitize": "^1.1.0",
   "mongoose": "^5.9.20",
   "mongoose-paginate-v2": "^1.3.9",
+  "morgan": "^1.10.0",
   "multer": "^1.4.2",
   "node-ipinfo": "^1.0.1",
   "nodemailer": "^6.4.10",
@@ -51,6 +49,7 @@
   "rate-limit-mongo": "^2.2.0",
   "request": "^2.88.2",
   "request-promise": "^4.2.5",
+  "rotating-file-stream": "^2.1.1",
   "snyk": "^1.352.1",
   "stripe": "^7.15.0"
  },
