--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"start": "node app.js",
+		"start": "pm2-runtime start ecosystem.config.js --env production",
 		"devStart": "nodemon app",
 		"pretest": "eslint controllers/*.js controllers/helpers/*.js controllers/validators/*.js models/*.js public/scripts/*.js public/scripts/blog/*.js public/scripts/gallery/*.js public/scripts/shop/*.js -f table --fix",
 		"test": "snyk test",
@@ -49,6 +49,7 @@
 		"node-ipinfo": "=1.0.1",
 		"nodemailer": "=6.4.10",
 		"parse-error": "=0.2.0",
+		"pm2": "^4.4.0",
 		"rate-limit-mongo": "=2.2.0",
 		"request": "=2.88.2",
 		"request-promise": "=4.2.5",
@@ -63,5 +64,3 @@
 	},
 	"snyk": true
 }
-
-
