--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
 		"express-validator": "=6.6.0",
 		"helmet": "=3.23.3",
 		"log4js": "=6.3.0",
-		"memjs": "^1.2.2",
+		"memjs": "=1.2.2",
 		"money-exchange": "=1.0.0",
 		"mongo-sanitize": "=1.1.0",
 		"mongoose": "=5.9.20",
 		"mongoose-paginate-v2": "=1.3.9",
 		"morgan": "=1.10.0",
 		"multer": "=1.4.2",
-		"newrelic": "^6.11.0",
+		"newrelic": "=6.11.0",
 		"node-ipinfo": "=1.0.1",
 		"nodemailer": "=6.4.10",
 		"parse-error": "=0.2.0",
