--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"request": "=2.88.2",
 		"request-promise": "=4.2.5",
 		"rotating-file-stream": "=2.1.1",
+		"smooth-scrollbar": "^8.5.2",
 		"snyk": "=1.352.1",
 		"stripe": "=7.15.0"
 	},
