--- a/package.json
+++ b/package.json
@@ -1,70 +1,73 @@
 {
-  "name": "seyrene",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "prestart": "touch /tmp/app-initialized && mkdir /app/tmp && mkdir /app/tmp/log4js",
-    "start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app",
-    "devStart": "nodemon app",
-    "pretest": "eslint controllers/*.js controllers/helpers/*.js controllers/validators/*.js models/*.js public/scripts/*.js public/scripts/blog/*.js public/scripts/gallery/*.js public/scripts/shop/*.js -f table --fix",
-    "test": "snyk test",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ablin42/seyrene.git"
-  },
-  "author": "ablin42",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ablin42/seyrene/issues"
-  },
-  "homepage": "https://github.com/ablin42/seyrene#readme",
-  "dependencies": {
-    "bcryptjs": "=2.4.3",
-    "connect-mongo": "^3.2.0",
-    "cookie-parser": "=1.4.5",
-    "cookies-eu-banner": "^2.0.1",
-    "cors": "=2.8.5",
-    "country-list-js": "=3.1.7",
-    "csurf": "=1.11.0",
-    "date-format": "=2.1.0",
-    "dotenv": "=8.2.0",
-    "ejs": "=2.7.4",
-    "express": "=4.17.1",
-    "express-flash": "0.0.2",
-    "express-rate-limit": "=5.1.3",
-    "express-sanitizer": "=1.0.5",
-    "express-session": "=1.17.1",
-    "express-validator": "^6.6.0",
-    "helmet": "=3.23.3",
-    "log4js": "=6.3.0",
-    "memjs": "=1.2.2",
-    "money-exchange": "=1.0.0",
-    "mongo-sanitize": "=1.1.0",
-    "mongoose": "^5.9.20",
-    "mongoose-paginate-v2": "=1.3.9",
-    "morgan": "=1.10.0",
-    "multer": "=1.4.2",
-    "newrelic": "^6.11.0",
-    "node-ipinfo": "=1.0.1",
-    "nodemailer": "=6.4.10",
-    "parse-error": "=0.2.0",
-    "pm2": "^4.4.0",
-    "rate-limit-mongo": "^2.2.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "rotating-file-stream": "=2.1.1",
-    "smooth-scrollbar": "^8.5.2",
-    "snyk": "^1.352.1",
-    "stripe": "=7.15.0"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-security": "^1.4.0",
-    "live-server": "^1.2.1"
-  },
-  "snyk": true
+	"name": "seyrene",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"prestart": "touch /tmp/app-initialized && mkdir /app/tmp && mkdir /app/tmp/log4js",
+		"start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app",
+		"devStart": "nodemon app",
+		"pretest": "eslint controllers/*.js controllers/helpers/*.js controllers/validators/*.js models/*.js public/scripts/*.js public/scripts/blog/*.js public/scripts/gallery/*.js public/scripts/shop/*.js -f table --fix",
+		"test": "snyk test",
+		"snyk-protect": "snyk protect",
+		"prepare": "npm run snyk-protect"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ablin42/seyrene.git"
+	},
+	"author": "ablin42",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ablin42/seyrene/issues"
+	},
+	"homepage": "https://github.com/ablin42/seyrene#readme",
+	"dependencies": {
+		"aws-sdk": "^2.763.0",
+		"bcryptjs": "=2.4.3",
+		"connect-mongo": "^3.2.0",
+		"cookie-parser": "=1.4.5",
+		"cookies-eu-banner": "^2.0.1",
+		"cors": "=2.8.5",
+		"country-list-js": "=3.1.7",
+		"csurf": "=1.11.0",
+		"date-format": "=2.1.0",
+		"dotenv": "=8.2.0",
+		"ejs": "=2.7.4",
+		"express": "=4.17.1",
+		"express-flash": "0.0.2",
+		"express-rate-limit": "=5.1.3",
+		"express-sanitizer": "=1.0.5",
+		"express-session": "=1.17.1",
+		"express-validator": "^6.6.0",
+		"helmet": "=3.23.3",
+		"lodash": "^4.17.20",
+		"log4js": "=6.3.0",
+		"memjs": "=1.2.2",
+		"mime-types": "^2.1.27",
+		"money-exchange": "=1.0.0",
+		"mongo-sanitize": "=1.1.0",
+		"mongoose": "^5.9.20",
+		"mongoose-paginate-v2": "=1.3.9",
+		"morgan": "=1.10.0",
+		"multer": "=1.4.2",
+		"newrelic": "^6.11.0",
+		"node-ipinfo": "=1.0.1",
+		"nodemailer": "=6.4.10",
+		"parse-error": "=0.2.0",
+		"pm2": "^4.4.0",
+		"rate-limit-mongo": "^2.2.0",
+		"request": "^2.88.2",
+		"request-promise": "^4.2.5",
+		"rotating-file-stream": "=2.1.1",
+		"smooth-scrollbar": "^8.5.2",
+		"snyk": "^1.352.1",
+		"stripe": "=7.15.0"
+	},
+	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-plugin-security": "^1.4.0",
+		"live-server": "^1.2.1"
+	},
+	"snyk": true
 }
