--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"mongoose-paginate-v2": "=1.3.9",
 		"morgan": "=1.10.0",
 		"multer": "=1.4.2",
+		"multer-s3": "^2.9.0",
 		"newrelic": "^6.11.0",
 		"node-ipinfo": "=1.0.1",
 		"nodemailer": "=6.4.10",
