--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"request": "^2.88.2",
 		"request-promise": "^4.2.5",
 		"rotating-file-stream": "=2.1.1",
+		"shortid": "^2.2.15",
 		"smooth-scrollbar": "^8.5.2",
 		"snyk": "^1.352.1",
 		"stripe": "=7.15.0"
