--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"multer-s3": "^2.9.0",
 		"newrelic": "^6.11.0",
 		"node-ipinfo": "=1.0.1",
-		"nodemailer": "=6.4.10",
+		"nodemailer": "^6.4.10",
 		"parse-error": "=0.2.0",
 		"pm2": "^4.4.0",
 		"rate-limit-mongo": "^2.2.0",
